[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menu/SettingsMenu.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 360.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 360.0
margin_bottom = 400.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Menu Options" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 20.0
margin_right = 220.0
margin_bottom = 300.0
custom_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/MarginContainer/Menu Options"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 117.0
rect_min_size = Vector2( 200, 25 )
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/MarginContainer/Menu Options"]
margin_top = 137.0
margin_right = 200.0
margin_bottom = 162.0
rect_min_size = Vector2( 200, 25 )
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/MarginContainer/Menu Options"]
margin_top = 182.0
margin_right = 200.0
margin_bottom = 207.0
rect_min_size = Vector2( 200, 25 )
text = "Exit"

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
